[FLINK-40048][e2e] Use List.of instead of Arrays.asList
Generated-by: Claude Code (Fable 5)